--- a/.goreleaser.linux.amd64.yaml
+++ b/.goreleaser.linux.amd64.yaml
@@ -5,6 +5,7 @@ project_name: sling
 before:
   hooks:
     - go mod edit -dropreplace='github.com/flarco/g' go.mod
+    - go mod edit -dropreplace='github.com/slingdata-io/sling' go.mod
     - go mod tidy
     # you may remove this if you don't need go generate
     - go generate ./...
