fix snowflake NULL_IF, aws-sdk-go-v2 version

--- a/core/dbio/templates/snowflake.yaml
+++ b/core/dbio/templates/snowflake.yaml
@@ -21,7 +21,7 @@ core:
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
       EMPTY_FIELD_AS_NULL=TRUE
-      NULL_IF = ''
+      NULL_IF = '\\N'
       SKIP_HEADER=1
       REPLACE_INVALID_CHARACTERS=TRUE
     )
@@ -39,7 +39,7 @@ core:
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
       EMPTY_FIELD_AS_NULL=TRUE
-      NULL_IF = ''
+      NULL_IF = '\\N'
       SKIP_HEADER=1
       REPLACE_INVALID_CHARACTERS=TRUE
     )
@@ -56,7 +56,7 @@ core:
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
       EMPTY_FIELD_AS_NULL=TRUE
-      NULL_IF = ''
+      NULL_IF = '\\N'
       SKIP_HEADER=1
       REPLACE_INVALID_CHARACTERS=TRUE
     )
@@ -68,7 +68,7 @@ core:
       TYPE = CSV
       RECORD_DELIMITER = '\n'
       EMPTY_FIELD_AS_NULL = TRUE
-      NULL_IF = ''
+      NULL_IF = '\\N'
       COMPRESSION = GZIP
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
@@ -85,7 +85,7 @@ core:
       TYPE = CSV
       RECORD_DELIMITER = '\n'
       EMPTY_FIELD_AS_NULL = TRUE
-      NULL_IF = ''
+      NULL_IF = '\\N'
       COMPRESSION = GZIP
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
@@ -101,7 +101,7 @@ core:
       TYPE = CSV
       RECORD_DELIMITER = '\n'
       EMPTY_FIELD_AS_NULL = TRUE
-      NULL_IF = ''
+      NULL_IF = '\\N'
       COMPRESSION = GZIP
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
