--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,6 +5,9 @@ on:
   repository_dispatch:
     types: [build-test]
 
+env:
+  GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
+
 jobs:
   build-for-test:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[bump]'))"
@@ -28,6 +31,10 @@ jobs:
       #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
       #     restore-keys: |
       #       ${{ runner.os }}-go-
+        
+      - name: Configure private token
+        run: |
+          git config --global url."https://${GITHUB_TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
 
       - name: Build
         env:
@@ -69,6 +76,10 @@ jobs:
         with:
           go-version: "1.21"
           cache: false
+        
+      - name: Configure private token
+        run: |
+          git config --global url."https://${GITHUB_TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
 
       - name: Run Go Tests (sling)
         run: |
