--- a/.github/workflows/test-docker-build.yml
+++ b/.github/workflows/test-docker-build.yml
@@ -92,7 +92,8 @@ jobs:
         
       - name: Configure private token
         run: |
-          git config --global url."https://$env:GITHUB_TOKEN:x-oauth-basic@github.com/".insteadOf "https://github.com/"  
+          $url = ("https://" + $env:GITHUB_TOKEN + ":x-oauth-basic@github.com/")
+          git config --global url."$url".insteadOf "https://github.com/"  
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
