--- a/core/dbio/templates/redshift.yaml
+++ b/core/dbio/templates/redshift.yaml
@@ -38,7 +38,7 @@ core:
     unload ('{sql}')   
     to '{s3_path}'
     credentials 'aws_access_key_id={aws_access_key_id};aws_secret_access_key={aws_secret_access_key}'
-    gzip allowoverwrite CSV PARALLEL {parallel} NULL '\N' HEADER DELIMITER ','
+    gzip allowoverwrite CSV PARALLEL {parallel} NULL '\\N' HEADER DELIMITER ','
   alter_columns: |
     alter table {table} {col_ddl}
   stl_load_errors_check: select colname, line_number, err_reason  from stl_load_errors order by starttime desc limit 1
