optimize snowflake BulkExportFlow

--- a/core/dbio/templates/snowflake.yaml
+++ b/core/dbio/templates/snowflake.yaml
@@ -72,7 +72,7 @@ core:
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
     )
-    HEADER = FALSE
+    HEADER = TRUE
   copy_to_s3: |
     COPY INTO '{s3_path}'
     FROM ({sql})
@@ -88,7 +88,7 @@ core:
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
     )
-    HEADER = FALSE
+    HEADER = TRUE
   copy_to_azure: |
     COPY INTO '{azure_path}/'
     FROM ({sql})
@@ -103,7 +103,7 @@ core:
       ESCAPE_UNENCLOSED_FIELD = NONE
       FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
     )
-    HEADER = FALSE
+    HEADER = TRUE
 
 metadata:
 
