--- a/core/dbio/templates/oracle.yaml
+++ b/core/dbio/templates/oracle.yaml
@@ -38,7 +38,9 @@ core:
       SELECT 1 FROM DUAL
   insert_option: /*+ APPEND NOLOGGING */
   sample: SELECT {fields} FROM {table} SAMPLE(50) where rownum <= {n}
-  limit: select * from ( {sql} ) where rownum <= {limit}
+  limit: select {fields} from {table} where rownum <= {limit}
+  limit_offset: select {fields} from {table} order by 1 offset {offset} rows fetch next {limit} rows only
+  limit_sql: select * from ( {sql} ) where rownum <= {limit}
   replace: |
     merge into {table} tgt
     USING (SELECT {name_values}
