--- a/core/dbio/templates/sqlite.yaml
+++ b/core/dbio/templates/sqlite.yaml
@@ -1,6 +1,7 @@
 core:
   drop_table: drop table if exists {table}
   drop_view: drop view if exists {view}
+  drop_index: drop index if exists {index}
   create_table: create table if not exists {table} ({col_types})
   create_unique_index: create unique index if not exists {index} on {table} ({cols})
   replace: replace into {table} ({names}) values({values})
