--- a/core/dbio/templates/oracle.yaml
+++ b/core/dbio/templates/oracle.yaml
@@ -37,23 +37,23 @@ core:
     END;
   create_temporary_table: create global temporary table {table} ({col_types})
   create_index: create index {index} on {table} ({cols})
-  insert: INSERT {options} INTO {table} ({fields}) VALUES ({values})
+  insert: INSERT {options} INTO {table} ({fields}) values  ({values})
   alter_columns: alter table {table} modify ({col_ddl})
   insert_all: |
       INSERT ALL
-      INTO t (col1, col2, col3) VALUES ('val1_1', 'val1_2', 'val1_3')
-      INTO t (col1, col2, col3) VALUES ('val2_1', 'val2_2', 'val2_3')
-      INTO t (col1, col2, col3) VALUES ('val3_1', 'val3_2', 'val3_3')
-      SELECT 1 FROM DUAL
+      INTO t (col1, col2, col3) values  ('val1_1', 'val1_2', 'val1_3')
+      INTO t (col1, col2, col3) values  ('val2_1', 'val2_2', 'val2_3')
+      INTO t (col1, col2, col3) values  ('val3_1', 'val3_2', 'val3_3')
+      select 1 from DUAL
   insert_option: /*+ APPEND NOLOGGING */
-  sample: SELECT {fields} FROM {table} SAMPLE(50) where rownum <= {n}
+  sample: select {fields} from {table} SAMPLE(50) where rownum <= {n}
   limit: select {fields} from {table} where rownum <= {limit}
   limit_offset: select {fields} from {table} order by 1 offset {offset} rows fetch next {limit} rows only
   limit_sql: select * from ( {sql} ) where rownum <= {limit}
   replace: |
     merge into {table} tgt
-    USING (SELECT {name_values}
-            FROM dual) src
+    using (select {name_values}
+            from dual) src
     ON ({src_tgt_condition})
     WHEN MATCHED THEN
       UPDATE SET {set_fields}
@@ -130,8 +130,8 @@ metadata:
       cons.constraint_name as pk_name,
       cols.position as position,
       cols.column_name as column_name
-    FROM all_constraints cons, all_cons_columns cols
-    WHERE cons.owner = '{schema}'
+    from all_constraints cons, all_cons_columns cols
+    where cons.owner = '{schema}'
       and cols.table_name = '{table}'
       and cons.constraint_type = 'P'
       and cons.constraint_name = cols.constraint_name
