--- a/core/dbio/templates/snowflake.yaml
+++ b/core/dbio/templates/snowflake.yaml
@@ -490,6 +490,7 @@ variable:
   bind_string: "?"
   tmp_folder: /tmp
   column_upper: true
+  max_string_type: varchar
 
 error_filter:
   table_not_exist: exist
