--- a/core/dbio/templates/snowflake.yaml
+++ b/core/dbio/templates/snowflake.yaml
@@ -1,8 +1,9 @@
 core:
   drop_table: drop table if exists {table}
   drop_view: drop view if exists {view}
+  drop_index: "select 'indexes do not apply for snowflake'"
   create_table: create table {table} ({col_types}) {cluster_by}
-  create_index: create index {index} on {table} ({cols})
+  create_index: "select 'indexes do not apply for snowflake'"
   insert: insert into {table} ({fields}) values ({values})
   update: update {table} set {set_fields} where {pk_fields_equal}
   alter_columns: alter table {table} alter {col_ddl}
